<resources>
    <string name="app_name">Glucose Guardian</string>
    <string name="health_bar">Pet Health</string>
    <string name="hunger_bar">Pet Hunger</string>
    <string name="view_logbook_button">Logbook</string>
    <string name="pet_title">pet_title</string>
    <string name="pet_name">pet_name</string>
    <string name="feed">feed</string>
    <string name="pet_dscrpt">pet_dscrpt</string>
    <string name="experience_bar">Experience Points</string>
    <string name="pet_level_textview">Pet Level</string>
</resources>